<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPlat"
    android:orientation="vertical">

    <!-- Un ScrollView serveix perquè es pugui fer scroll a la pàgina. S'ha de posar tot el
     contingut dins seu, tot recordant que només admet un element fill directe dins seu. Per
     tant l'element que li fico dins és un LinearLayout que té tot el contingut -->
    <ScrollView android:id="@+id/ScrollViewID"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/foto_plat"
                android:layout_width="310dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

            <!-- Aquest linearLayout serveix per posar el nom del plat al costat del preu -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/nom_plat"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/preu_plat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/simbol_euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simbol_euro"
                    android:textSize="16sp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/descripcio_plat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"/>

            <RadioGroup
                android:id="@+id/botonsRecollir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                >
                <!-- Atribut antic del RadioGroup: android:gravity="left" -->

                <RadioButton
                    android:id="@+id/botoLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recollir_local"
                    android:textSize="14sp"
                    android:gravity="left"/>

                <RadioButton
                    android:id="@+id/botoDomicili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_domicili"
                    android:textSize="14sp"
                    android:gravity="left"/>
            </RadioGroup>

            <CheckBox
                android:id="@+id/CheckExtraFormatge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_formatge"
                android:layout_gravity="right"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                />

            <!-- Aquest linearLayout serveix per posar la paraula Quantitat al costat del desplegable-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/quantitat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantitat"
                    android:textSize="16sp"/>

                <!-- Un Spinner és un desplegable -->
                <Spinner
                    android:id="@+id/quantitatDesplegable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <Button
                android:id="@+id/botoComprar"
                style="@style/estilBoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botoComprar"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>